--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
-before_install: sudo apt-get install lighttpd libfcgi-dev libmemcache-dev memcached
+before_install: uname -a; sudo apt-get install lighttpd libfcgi-dev libmemcache-dev memcached
 install:
   - gem env version | grep '^\(2\|1.\(8\|9\|[0-9][0-9]\)\)' || gem update --system
   - bundle install --jobs=3 --retry=3
